<resources>
    <string name="app_name">Android</string>
    <string name="create_account_title">Регистрация</string>
    <string name="login_hint">Введите логин</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Введите пароль</string>
    <string name="register_button_text">Регистрация</string>
    <string name="have_account_text">Вход</string>
    <string name="pass_text">Пароль</string>
    <string name="registration_text">Зарегистрироваться</string>
    <string name="have_account">Уже есть аккаунт? Войти</string>
    <string name="back_button_description">Назад</string>
    <string name="back_button">Назад</string>
    <string name="to_login">Войти</string>
    <string name="go_to_payments">Список последних платежей</string>
    <string name="utility_indicators_text">Список коммунальных показателей</string>
    <string name="main_activity_title">Главный экран</string>
    <string name="transaction_string">Квитанция:</string>
    <string name="ticket">Квитанции об оплате</string>
    <string name="room">Квартира</string>
    <string name="rooms">Квартиры</string>
    <string name="enter_account">Вход</string>
    <string name="login">Логин</string>
    <string name="entry_text">Войти</string>
</resources>