<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:padding="24dp"
    tools:context=".MainActivity">

    <!-- Кнопка Назад -->

    <!-- Заголовок -->

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button_description"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Кнопка Перейти к Платежам -->

    <ImageView
        android:id="@+id/home"
        android:layout_width="273dp"
        android:layout_height="313dp"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintVertical_bias="0.172" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/to_payments"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/accent_mint"
        android:text="@string/go_to_payments"
        android:textColor="@color/button_text"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка Коммунальные Услуги -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/utility_indicators"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/accent_mint"
        android:text="@string/utility_indicators_text"
        android:textColor="@color/button_text"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/to_payments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
